--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -34,28 +34,36 @@
                             class="sr-only">(current)</span></a>
                 </li>
             {% endif %}
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false"> Common Actions
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    {% if user.is_physician %}
-                        <a class="dropdown-item" href="{% url 'all specific physician patients' user.pk %}">Check Your
-                            Patients</a>
-                    {% endif %}
-                    {% if user.is_patient %}
-                        <a class="dropdown-item" href="{% url 'all patient specific results' user.pk %}">Check Your
-                            Results</a>
-                    {% endif %}
-                    {% if user.is_staff %}
-                        <a class="dropdown-item" href="{% url 'create user_as_patient' %}">Register New Patient</a>
-                        <a class="dropdown-item" href="{% url 'all patients' %}">All Patient List</a>
-                        <a class="dropdown-item" href="{% url 'all physicians' %}">All Physicians List</a>
-                    {% endif %}
+            {% if user.is_authenticated %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false"> Common Actions
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url 'change password' user.pk %}">Change Your Password</a>
+                        {% if user.is_physician %}
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'all specific physician patients' user.pk %}">Check
+                                Your Patients</a>
+                        {% endif %}
+                        {% if user.is_patient %}
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'all patient specific results' user.pk %}">Check Your
+                                Results</a>
+                        {% endif %}
+                        {% if user.is_staff %}
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'create user_as_patient' %}">Register New Patient</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'all patients' %}">All Patient List</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'all physicians' %}">All Physicians List</a>
+                        {% endif %}
 
-                </div>
-            </li>
-
+                    </div>
+                </li>
+            {% endif %}
             {% if user.is_superuser %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -67,6 +75,7 @@
                         <a class="dropdown-item" href="{% url 'department register' %}">Create New Department</a>
                         <a class="dropdown-item" href="{% url 'all deleted departments' %}">Show Deleted Departments
                             List</a>
+                        <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{% url 'all staffs' %}">Show Employees List</a>
                         <a class="dropdown-item" href="{% url 'create staff user' %}">Register New Employee</a>
                         <a class="dropdown-item" href="{% url 'all deleted staffs' %}">Show Deleted Employees List</a>
@@ -85,6 +94,7 @@
                             Physician</a>
                         <a class="dropdown-item" href="{% url 'all deleted physicians' %}">Show Deleted
                             Physicians List</a>
+                        <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{% url 'all health facilities' %}">Show Health Facilities
                             List</a>
                         <a class="dropdown-item" href="{% url 'health facility register' %}">Register New Health
@@ -107,7 +117,8 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{% url 'all analysis fields' %}">Analyses Fields List</a>
                         <a class="dropdown-item" href="{% url 'create analysis field' %}">Create New Analyses Field</a>
-                        <a class="dropdown-item" href="{% url 'all deleted analysis fields' %}">Deleted Analyses Fields List</a>
+                        <a class="dropdown-item" href="{% url 'all deleted analysis fields' %}">Deleted Analyses Fields
+                            List</a>
                         <div class="dropdown-divider"></div>
 
                         <a class="dropdown-item" href="{% url 'all patients' %}">Patients List</a>
@@ -119,36 +130,40 @@
             {% endif %}
         </ul>
         <br/>
-
         <form action="{% url 'all searched analyses' %}" class="form-inline my-2 my-lg-0" method="get">
             <div class="form-group mx-sm-3 mb-2">
                 <label for="" class="sr-only">Search</label>
                 <input type='text' name='search' class="form-control mr-sm-2" placeholder="Search analyses"
                        aria-label="Search">
+
+                <button type="submit" class="btn btn-outline-primary my-2 my-sm-0">Search</button>
             </div>
-            <button type="submit" class="btn btn-outline-success my-2 my-sm-0">Search</button>
         </form>
         <br/>
-        {% if user.is_authenticated %}
-            {% if user.is_patient %}
-                Welcome {{ user.profile.last_name }}!
-            {% endif %}
-            {% if user.is_physician %}
-                Welcome Dr. {{ user.profile.last_name }}!
-            {% endif %}
-            {% if user.is_staff %}
-                {% if user.is_superuser %}
-                    Welcome admin {{ user.profile.last_name }}!
-                {% else %}
-                    Welcome employee {{ user.profile.last_name }}!
+        <div class="form-group mx-sm-3 mb-2">
+            {% if user.is_authenticated %}
+                {% if user.is_patient %}
+                    Welcome {{ user.profile.last_name }}!
+                {% endif %}
+                {% if user.is_physician %}
+                    Welcome Dr. {{ user.profile.last_name }}!
+                {% endif %}
+                {% if user.is_staff %}
+                    {% if user.is_superuser %}
+                        Welcome admin {{ user.profile.last_name }}!
+                    {% else %}
+                        Welcome employee {{ user.profile.last_name }}!
+                    {% endif %}
                 {% endif %}
             {% endif %}
-        {% endif %}
-        {% if user.is_authenticated %}
-            <a class="nav-link" href="{% url 'logout user' %}">Logout <span class="sr-only">(current)</span></a>
-        {% else %}
-            <a class="nav-link" href="{% url 'login user' %}">Login <span class="sr-only">(current)</span></a>
-        {% endif %}
+        </div>
+        <div class="form-group mx-sm-3 mb-2">
+            {% if user.is_authenticated %}
+                <a class="nav-link" href="{% url 'logout user' %}">Logout <span class="sr-only">(current)</span></a>
+            {% else %}
+                <a class="nav-link" href="{% url 'login user' %}">Login <span class="sr-only">(current)</span></a>
+            {% endif %}
+        </div>
     </div>
 </nav>
 
