--- a/templates/users/patient/patient_edit.html
+++ b/templates/users/patient/patient_edit.html
@@ -1,18 +1,17 @@
 {% extends 'main/base.html' %}
 {% block page_content %}
     <h1 class="text-center">Edit Patient Form</h1>
-    <div class="row">
-        <div class="col-lg-6">
-            <form method="post" action="{% url 'edit patient' profile.pk %}">
-                {% csrf_token %}
-                {{ form.as_p }}
-
-                <button class="btn btn-primary mt-2" type="submit">Edit Patient</button>
-            </form>
-        </div>
-        <div class="col-lg-3"></div>
+    <div class="d-flex justify-content-center">
+        <form method="post" action="{% url 'edit patient' profile.pk %}">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div class="d-flex justify-content-center">
+                <button class="btn btn-primary mt-2" type="submit">Edit</button>
+            </div>
+        </form>
     </div>
-    <div class="row">
-    <a href="{% url 'delete patient' profile.pk %}"> Delete Profile </a>
+    <p></p>
+    <div class="d-flex justify-content-center">
+        <a href="{% url 'delete patient' object.pk %}" class="btn btn-danger" role="button">Delete </a>
     </div>
 {% endblock %}
