--- a/templates/users/patient/patient_restore.html
+++ b/templates/users/patient/patient_restore.html
@@ -1,5 +1,4 @@
 {% extends 'main/base.html' %}
-{#{% load crispy_forms_tags %}#}
 {% block page_content %}
     <h1 class="text-center">Restore Patient Form</h1>
     <div class="row">
@@ -24,7 +23,7 @@
                     Date of birth: {{ form.date_of_birth }}
                 </div>
 
-                <button class="btn btn-primary mt-2" type="submit">Restore Patient</button>
+                <button class="btn btn-primary mt-2" type="submit">Restore</button>
             </form>
         </div>
         <div class="col-lg-3"></div>
