Fix - deleted users now can not log in. Add integration tests for the views of:  - analysis_fields  - analysis  - department  - health facility  - patient  - result  Add validator unit tests

--- a/templates/users/patient/patient_details.html
+++ b/templates/users/patient/patient_details.html
@@ -74,7 +74,7 @@
                 {% else %}
                     <p></p>
                     <div class="col-lg-6">
-                        <a href="{{% url 'delete patient' object.pk %}" class="btn btn-danger btn-lg active"
+                        <a href="{% url 'delete patient' object.pk %}" class="btn btn-danger btn-lg active"
                            role="button" aria-pressed="true">Delete</a>
                     </div>
                     <p></p>
