--- a/templates/users/patient/patient_delete.html
+++ b/templates/users/patient/patient_delete.html
@@ -5,25 +5,26 @@
         <div class="col-lg-6">
             <form method="post" action="{% url 'delete patient' patient.pk %}">
                 {% csrf_token %}
-                <div class="col-lg-6">
-                    {{ patient_pid }}: {{ form.pid }}
-                </div>
-                <div class="col-lg-6">
-                    First Name: {{ form.first_name }}
-                </div>
-                {% if has_middlename %}
-                    <div class="col-lg-6">
-                        Middle Name: {{ form.middle_name }}
-                    </div>
-                {% endif %}
-                <div class="col-lg-6">
-                    Last Name: {{ form.last_name }}
-                </div>
-                <div class="col-lg-6">
-                    Date of birth: {{ form.date_of_birth }}
-                </div>
+                {{ form.as_p }}
+{#                <div class="col-lg-6">#}
+{#                    {{ patient_pid }}: {{ form.pid }}#}
+{#                </div>#}
+{#                <div class="col-lg-6">#}
+{#                    First Name: {{ form.first_name }}#}
+{#                </div>#}
+{#                {% if has_middlename %}#}
+{#                    <div class="col-lg-6">#}
+{#                        Middle Name: {{ form.middle_name }}#}
+{#                    </div>#}
+{#                {% endif %}#}
+{#                <div class="col-lg-6">#}
+{#                    Last Name: {{ form.last_name }}#}
+{#                </div>#}
+{#                <div class="col-lg-6">#}
+{#                    Date of birth: {{ form.date_of_birth }}#}
+{#                </div>#}
 
-                <button class="btn btn-primary mt-2" type="submit">Delete Patient</button>
+                <button class="btn btn-danger mt-2" type="submit">Delete Patient</button>
             </form>
         </div>
         <div class="col-lg-3"></div>
